--- a/FS005-Fashion Ecommerce Full Website/index.html
+++ b/FS005-Fashion Ecommerce Full Website/index.html
@@ -441,6 +441,64 @@
         </section>
 
         <!-- Contact Section -->
+        <section class="contact" id="contact">
+            <!-- Put the map of your location -->
+            <!-- following is just a random location -->
+            <!-- the iframe could be found on Google map -->
+            <!-- Better to catch use ip address then get location -->
+            <div class="map">
+                <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d391738.88399386517!2d115.8206976734375!3d39.90872019999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x36637698dc4374d9%3A0x6928cb83a148399a!2z5aSp5a6J6Zeo!5e0!3m2!1szh-CN!2stw!4v1713453889910!5m2!1szh-CN!2stw"
+                        style="border:0; width: 100%; height: 270px"
+                        allowfullscreen
+                        frameborder="0"
+                        loading="lazy">
+                </iframe>
+            </div>
+
+            <div class="info-wrap">
+                <div class="info">
+                    <ion-icon name="navigate-circle-outline"></ion-icon>
+                    <h4>Location:</h4>
+                    <p>123 Your Street <br/>
+                        Your City. State 4000
+                    </p>
+                </div>
+
+                <div class="info">
+                    <ion-icon name="mail-outline"></ion-icon>
+                    <h4>Email:</h4>
+                    <p>info@example.com <br/>
+                        contact@example.com
+                    </p>
+                </div>
+
+                <div class="info">
+                    <ion-icon name="call-outline"></ion-icon>
+                    <h4>Call:</h4>
+                    <p>123456789 <br/>
+                        987654321
+                    </p>
+                </div>
+            </div>
+
+            <form class="contact-form">
+                <div class="form-group">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" placeholder="Subject" required>
+                </div>
+                <div class="form-group">
+                    <textarea name="message" rows="5" placeholder="Message"></textarea>
+                </div>
+                <div class="text-center">
+                    <button type="submit">Send Message</button>
+                </div>
+            </form>
+        </section>
+
         <!-- Footer Section -->
         <!-- Back to Top Button -->
     </main>
