--- a/FS006-Movie Website/index.html
+++ b/FS006-Movie Website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Movie Website | Animated Landing Page</title>
 </head>
@@ -23,6 +24,129 @@
         </div>
     </header>
 
+    <div class="banner">
+        <div class="content the-little-mermaid active">
+            <img src="./images/the-little-mermaid-title.png" alt="" class="movie-title">
+            <h4>
+                <span>2023</span>
+                <span><i>12+</i></span>
+                <span>2h 14min</span>
+                <span>Romance</span>
+            </h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="button">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i> Watch</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i> My List</a>
+            </div>
+        </div>
+
+        <div class="content bg-65">
+            <img src="./images/the-65-title.png" alt="" class="movie-title">
+            <h4>
+                <span>2023</span>
+                <span><i>12+</i></span>
+                <span>2h 14min</span>
+                <span>Romance</span>
+            </h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="button">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i> Watch</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i> My List</a>
+            </div>
+        </div>
+
+        <div class="content the-covenant">
+            <img src="./images/the-covenant-title.png" alt="" class="movie-title">
+            <h4>
+                <span>2023</span>
+                <span><i>12+</i></span>
+                <span>2h 14min</span>
+                <span>Romance</span>
+            </h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="button">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i> Watch</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i> My List</a>
+            </div>
+        </div>
+
+        <div class="content the-black-demon">
+            <img src="./images/the-black-demon-title.png" alt="" class="movie-title">
+            <h4>
+                <span>2023</span>
+                <span><i>12+</i></span>
+                <span>2h 14min</span>
+                <span>Romance</span>
+            </h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="button">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i> Watch</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i> My List</a>
+            </div>
+        </div>
+
+        <div class="content the-tank">
+            <img src="./images/the-tank-title.png" alt="" class="movie-title">
+            <h4>
+                <span>2023</span>
+                <span><i>12+</i></span>
+                <span>2h 14min</span>
+                <span>Romance</span>
+            </h4>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="button">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i> Watch</a>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i> My List</a>
+            </div>
+        </div>
+
+
+        <div class="carousel-box">
+            <div class="carousel">
+                <div class="carousel-item" onclick="changeBg('bg-little-mermaid.jpg','the-little-mermaid')">
+                    <img src="./images/movies/the-little-mermaid.jpeg" alt="">
+                </div>
+
+                <div class="carousel-item" onclick="changeBg('bg-65.jpeg', 'bg-65')">
+                    <img src="./images/movies/65.jpg" alt="">
+                </div>
+
+                <div class="carousel-item" onclick="changeBg('bg-the-covenant.jpeg','the-covenant')">
+                    <img src="./images/movies/the-covenant.jpg" alt="">
+                </div>
+
+                <div class="carousel-item" onclick="changeBg('bg-the-black-demon.jpeg','the-black-demon')">
+                    <img src="./images/movies/the-black-demon.jpg" alt="">
+                </div>
+
+                <div class="carousel-item" onclick="changeBg('bg-the-tank.jpeg','the-tank')">
+                    <img src="./images/movies/the-tank.jpeg" alt="">
+                </div>
+            </div>
+        </div>
+        <a href="#" class="play" onclick="toggleVideo()"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Watch Trailer</a>
+        <ul class="sci">
+            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
+    </div>
+
+    <div class="trailer">
+        <video src="./assets/The-man-like-me.mp4" muted controls autoplay></video>
+        <img src="./images/close.png" alt="" class="close" onclick="toggleVideo()">
+    </div>
+
     <!-- Vendor Script -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -30,6 +154,11 @@
 
     <!-- Customized Script -->
     <script src="./js/script.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.carousel').carousel();
+        });
+    </script>
 
 </body>
 </html>
