--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -64,6 +64,19 @@
                     muted
             ></video>
         </div>
+
+        <div class="content">
+            <h1>McLAREN</h1>
+            <h3 class="model mclaren-1 active">765LT SPIDER</h3>
+            <h3 class="model mclaren-2" style="color: #92ff00">ARTURA</h3>
+            <h3 class="model mclaren-3" style="color: #ff0015">750S</h3>
+            <h3 class="model mclaren-4" style="color: #ff2e00">765LT</h3>
+            <h3 class="model mclaren-5" style="color: #bbc0dd">750S SPIDER</h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
+            <a href="#">Enquire</a>
+        </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
