--- a/FS008-Sports Car Website/index.html
+++ b/FS008-Sports Car Website/index.html
@@ -77,6 +77,79 @@
             </p>
             <a href="#">Enquire</a>
         </div>
+
+        <div class="screen">
+            <div class="shadow"></div>
+            <div>
+                <span style="--i:0">
+                    <!-- Insert the screen video -->
+                    <!-- Video data mapping -->
+                    <!-- match the video name with the class name -->
+                    <video
+                            src="./assets/mclaren-1.mp4"
+                            class="trailer mclaren-1 screen-video active"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                    <video
+                            src="./assets/mclaren-2.mp4"
+                            class="trailer mclaren-2 screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                    <video
+                            src="./assets/mclaren-3.mp4"
+                            class="trailer mclaren-3 screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                    <video
+                            src="./assets/mclaren-4.mp4"
+                            class="trailer mclaren-4 screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                    <video
+                            src="./assets/mclaren-5.mp4"
+                            class="trailer mclaren-5 screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                </span>
+                <span style="--i:1">
+                    <video
+                            src="./assets/trailer-1.mp4"
+                            class="screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                </span>
+                <span style="--i:2">
+                    <video
+                            src="./assets/trailer-2.mp4"
+                            class="screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                </span>
+                <span style="--i:3">
+                    <video
+                            src="./assets/trailer-3.mp4"
+                            class="screen-video"
+                            autoplay
+                            loop
+                            muted
+                    ></video>
+                </span>
+            </div>
+        </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
